--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,11 @@ dependencies {
 
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Google Location and Activity Recognition
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+
+    //maps depedency
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
